--- a/haga/package.json
+++ b/haga/package.json
@@ -13,8 +13,11 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^24.0.15",
+    "@types/react": "^16.8.24",
+    "@types/react-dom": "^16.8.5",
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
@@ -26,7 +29,9 @@
     "webpack-dev-server": "^3.7.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4"
+    "@babel/polyfill": "^7.4.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "jest": {
     "moduleFileExtensions": [
