--- a/haga/package.json
+++ b/haga/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "emotion": "^10.0.14",
     "preact": "^10.0.0-rc.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
